--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,ts,tsx}\""
+    "format": "prettier --write \"**/*.{js,ts,tsx,css}\""
   },
   "dependencies": {
     "@shutter-network/shop-sdk": "^0.1.2",
     "@shutter-network/shutter-crypto": "^2.0.0",
+    "blockies-react-svg": "^0.0.13",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
