--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@shutter-network/shop-sdk": "^0.1.2",
     "@shutter-network/shutter-crypto": "^2.0.0",
     "blockies-react-svg": "^0.0.13",
+    "ethers": "^6.11.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
